@@ -1,7 +1,5 @@
 AUX falf-1.0-desktop.patch 675 RMD160 cec47ed0babd6b441852705f5ce85fd1872b7eab SHA1 6336f9334e1faf00ce2f0240559a9e62ab847e5b SHA256 3f54061de1c7096bed3fe1a1e1f087901787c7080c18e370efb252bbf33e38f8
-DIST falf-1.2.tar.bz2 95897 RMD160 51a98e411e86024b6e3381ebffdced1deb680af5 SHA1 fb7c7f990b79cf259aaabfbd6909e67235dd0b0d SHA256 4334f26f734940c94e7b86056c2c4310446a5402805571c855ed33dee13f86cb
 DIST falf-1.3.tar.bz2 97775 RMD160 1f6b6360c1915c3bc0f3732676ab8079e5711ee3 SHA1 29c679c8ca8a30b803fe6dd0264afcf675db5da3 SHA256 0707c21094d78f2663484d00f61194053054fb896424e39acc4604dcd92fc2ba
-EBUILD falf-1.2.ebuild 2298 RMD160 2aaf788fb089c85c9762c929139d02d6167565cc SHA1 cd24d7cf83fb36763e88288dbfe219e0bfc11ea6 SHA256 c1164aa35a0d1f588592e845392ffc7e7d00d574644a6de2afe2492dfe1137bd
-EBUILD falf-1.3.ebuild 2298 RMD160 2aaf788fb089c85c9762c929139d02d6167565cc SHA1 cd24d7cf83fb36763e88288dbfe219e0bfc11ea6 SHA256 c1164aa35a0d1f588592e845392ffc7e7d00d574644a6de2afe2492dfe1137bd
-EBUILD falf-9999.ebuild 2028 RMD160 ee6f2662ceda12c52187e6a63d005d08044abdd2 SHA1 47f4172eab923ee41c343068765fe85409fd1c65 SHA256 a7a7586d09b44b2754b949068a5f5c993e5fb295d01a0e5d0380525dc6ef09a6
-MISC ChangeLog 1310 RMD160 16eebace413532e29bbe518a6dca3a1877efb162 SHA1 165b5c6dc40e3a5be3c482c3f3952334a339d067 SHA256 db163cb63470c94045f00acb3772339e018aa92cbc72edce0a36e8daad2e198f
+EBUILD falf-1.3.ebuild 1965 RMD160 13d4358068306d035e2d71327e05e737d0b5ac3f SHA1 d766ee5396f62bf7ab57d7267a04c483a8507f90 SHA256 457fd847aeda4a4b0ee1f9c66132193dfafc973d5b85d728d22e146ef17a07c7
+EBUILD falf-9999.ebuild 2024 RMD160 4ff83ccfefc38fd5a5ae214132cfb5d4a78512ef SHA1 b22ba11e0a7496fceec31cbf2996acaeab1606de SHA256 6155fde665ffae0c598e7ec2c8d6ea44f21afc7094709cd02ee67c9eb3616dd6
+MISC ChangeLog 1452 RMD160 427d9743a1b88d81f4e98b3898a3f165fde03ae0 SHA1 81ce0d3e7e738e63abb7c9af54db890f95a5e7b0 SHA256 43ffe4481744e89cdbe69b56ff97194bb2800bd3a81c01ce0fa0f310cb43d664
